# wintray

./: Cargo.toml  LICENSE  README.md  deny.toml  rustfmt.toml  sonar-project.properties
.github/workflows/: build.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: assets.rs  config.rs  engine.rs  lib.rs  tray.rs
