[package]
name = "wintray"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", default-features = false, features = ["http1", "form", "tokio", "query", "multipart"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "net"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
askama = "0.15.6"
tray-icon = "0.22.1"
open = "5.3.4"
tao = "0.35.0"
resvg = { version = "0.47.0", default-features = false }
usvg = { version = "0.47.0", default-features = false }
tiny-skia = "0.12.0"
rust-embed = { version = "8.11.0", default-features = false }
mime_guess = { version = "2.0.5", default-features = false }
