[package]
name = "wintray"
version = "0.0.1"
authors = [
	"WasmBridge Team",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/wasmbrigde/wintray"
[lib]
name = "wintray"
path = "src/lib.rs"
[dependencies]
wintray-macros = { path = "./macros" }
axum = { version = "0.8.9", default-features = false, features = [
	"http1",
	"form",
	"tokio",
	"query",
	"multipart",
] }
tokio = { version = "1.52.1", features = [
	"rt-multi-thread",
	"net",
] }
serde = { version = "1.0.228", features = [
	"derive",
] }
toml = "0.8"
askama = "0.15.6"
open = "5.3.4"
resvg = { version = "0.47.0", default-features = false }
usvg = { version = "0.47.0", default-features = false }
tiny-skia = "0.12.0"
rust-embed = { version = "8.11.0", features = ["axum"] }
mime_guess = { version = "2.0.5", default-features = false }
rcgen = "0.13"
axum-server = { version = "0.7", features = [
	"tls-rustls",
] }
rustls = { version = "0.23", features = [
	"ring",
] }

[target.'cfg(windows)'.dependencies]
tray-icon = "0.24.0"
tao = "0.35.2"
